@@ -53,194 +53,12 @@ Cu.import("resource://conversations/misc.js"); // for joinWordList
 Cu.import("resource://conversations/prefs.js");
 Cu.import("resource://conversations/log.js");
 
-const kStubUrl = "chrome://conversations/content/stub.xhtml";
-
 const observerService = Cc["@mozilla.org/observer-service;1"]
                         .getService(Ci.nsIObserverService);
 
 let strings = new StringBundle("chrome://conversations/locale/message.properties");
 
 let Log = setupLogging("Conversations.MonkeyPatch");
-
-let conversationTabType = {
-  name: "conversationTab",
-  perTabPanel: "vbox",
-  lastId: 0,
-
-  modes: {
-    conversationTab: {
-      type: "conversationTab",
-      maxTabs: 10
-    }
-  },
-
-  // Always open new conversation windows. Not true if we try to edit a draft that
-  // already has an associated conversation window open, but that's for later...
-  shouldSwitchTo: function onSwitchTo() {
-    return -1;
-  },
-
-  openTab: function onTabOpened(aTab, aArgs) {
-    let window = getMail3Pane();
-
-    // First clone the page and set up the basics.
-    let browser = window.document.getElementById("dummychromebrowser").cloneNode(true);
-    browser.setAttribute("tooltip", "aHTMLTooltip");
-    browser.setAttribute("id", "conversationTab-" + this.lastId);
-    browser.setAttribute("onclick", "specialTabs.defaultClickHandler(event);");
-    browser.setAttribute("context", "mailContext");
-    browser.data = aArgs;
-    browser.data.tabObject = aTab;
-
-    // Done.
-    aTab.panel.appendChild(browser);
-    aTab.browser = browser;
-
-    // Now set up the listeners.
-    this._setUpTitleListener(aTab);
-    this._setUpCloseWindowListener(aTab);
-
-    // Now start loading the content.
-    aTab.title = "Conversation View";
-    browser.addEventListener("load", function _onload (event) {
-      browser.removeEventListener("load", _onload, true);
-      aArgs.onLoad(event, browser);
-    }, true);
-    browser.loadURI(kStubUrl);
-
-    this.lastId++;
-  },
-
-  closeTab: function onTabClosed(aTab) {
-    aTab.browser.removeEventListener("DOMTitleChanged",
-                                     aTab.titleListener, true);
-    aTab.browser.removeEventListener("DOMWindowClose",
-                                     aTab.closeListener, true);
-    aTab.browser.destroy();
-  },
-
-  saveTabState: function onSaveTabState(aTab) {
-  },
-
-  showTab: function onShowTab(aTab) {
-  },
-
-  persistTab: function onPersistTab(aTab) {
-    // TODO save the current tab's status. Save the msgHdr through its URI
-  },
-
-  restoreTab: function onRestoreTab(aTabmail, aPersistedState) {
-    // TODO create a new tab with the same status...
-  },
-
-  onTitleChanged: function onTitleChanged(aTab) {
-    aTab.title = aTab.browser.contentDocument.title;
-  },
-
-  supportsCommand: function supportsCommand(aCommand, aTab) {
-    switch (aCommand) {
-      case "cmd_fullZoomReduce":
-      case "cmd_fullZoomEnlarge":
-      case "cmd_fullZoomReset":
-      case "cmd_fullZoomToggle":
-      case "cmd_printSetup":
-      case "cmd_print":
-      case "button_print":
-      // XXX print preview not currently supported - bug 497994 to implement.
-      // case "cmd_printpreview":
-        return true;
-      default:
-        return false;
-    }
-  },
-
-  isCommandEnabled: function isCommandEnabled(aCommand, aTab) {
-    switch (aCommand) {
-      case "cmd_fullZoomReduce":
-      case "cmd_fullZoomEnlarge":
-      case "cmd_fullZoomReset":
-      case "cmd_fullZoomToggle":
-      case "cmd_printSetup":
-      case "cmd_print":
-      case "button_print":
-      // XXX print preview not currently supported - bug 497994 to implement.
-      // case "cmd_printpreview":
-        return true;
-      default:
-        return false;
-    }
-  },
-
-  doCommand: function isCommandEnabled(aCommand, aTab) {
-    switch (aCommand) {
-      case "cmd_fullZoomReduce":
-        ZoomManager.reduce();
-        break;
-      case "cmd_fullZoomEnlarge":
-        ZoomManager.enlarge();
-        break;
-      case "cmd_fullZoomReset":
-        ZoomManager.reset();
-        break;
-      case "cmd_fullZoomToggle":
-        ZoomManager.toggleZoom();
-        break;
-      case "cmd_printSetup":
-        PrintUtils.showPageSetup();
-        break;
-      case "cmd_print":
-        PrintUtils.print();
-        break;
-      // XXX print preview not currently supported - bug 497994 to implement.
-      //case "cmd_printpreview":
-      //  PrintUtils.printPreview();
-      //  break;
-    }
-  },
-
-  getBrowser: function getBrowser(aTab) {
-    return aTab.browser;
-  },
-
-  // Internal function used to set up the title listener on a content tab.
-  _setUpTitleListener: function setUpTitleListener(aTab) {
-    function onDOMTitleChanged(aEvent) {
-      getMail3Pane()
-        .document.getElementById("tabmail").setTabTitle(aTab);
-    }
-    // Save the function we'll use as listener so we can remove it later.
-    aTab.titleListener = onDOMTitleChanged;
-    // Add the listener.
-    aTab.browser.addEventListener("DOMTitleChanged",
-                                  aTab.titleListener, true);
-  },
-  /**
-   * Internal function used to set up the close window listener on a content
-   * tab.
-   */
-  _setUpCloseWindowListener: function setUpCloseWindowListener(aTab) {
-    function onDOMWindowClose(aEvent) {
-      try {
-        if (!aEvent.isTrusted)
-          return;
-
-        // Redirect any window.close events to closing the tab. As a 3-pane tab
-        // must be open, we don't need to worry about being the last tab open.
-        
-        getMail3Pane()
-          document.getElementById("tabmail").closeTab(aTab);
-        aEvent.preventDefault();
-      } catch (e) {
-        logException(e);
-      }
-    }
-    // Save the function we'll use as listener so we can remove it later.
-    aTab.closeListener = onDOMWindowClose;
-    // Add the listener.
-    aTab.browser.addEventListener("DOMWindowClose",
-                                  aTab.closeListener, true);
-  }
-};
 
 function MonkeyPatch(aWindow, aConversation) {
   this._Conversation = aConversation;
@@ -475,10 +293,6 @@ MonkeyPatch.prototype = {
     // Do this at least once at overlay load-time
     fillIdentities();
 
-    // Register our new tab type
-    let tabmail = window.document.getElementById("tabmail");
-    tabmail.registerTabType(conversationTabType);
-
     // Register our new column type
     this.registerColumn();
 
@@ -690,15 +504,10 @@ MonkeyPatch.prototype = {
           } else if (selectedCount == 1) {
             // Here starts the part where we modify the original code.
             let msgHdr = this.folderDisplay.selectedMessage;
-            // XXX unused right now
-            let wantedUrl = self._wantedUrl;
-            self._wantedUrl = null;
-
             // We can't display NTTP messages and RSS messages properly yet, so
             // leave it up to the standard message reader. If the user explicitely
             // asked for the old message reader, we give up as well.
-            if (msgHdrIsRss(msgHdr) || msgHdrIsNntp(msgHdr) ||
-                wantedUrl == msgHdrToNeckoURL(msgHdr).spec) {
+            if (msgHdrIsRss(msgHdr) || msgHdrIsNntp(msgHdr)) {
               // Use the default pref.
               self.markReadTimeout = window.setTimeout(function () {
                 msgHdrsMarkAsRead([msgHdr], true);
